# onnx2coreml

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/specs/: 2026-06-15-onnx2coreml-design.md
src/onnx2coreml/: __init__.py  __version__.py  _backend.py  _cli.py  _convert.py  _coverage.py  _io.py  _mil.py  _target.py  _types.py  _utils.py  _verify.py  converter.py  errors.py
src/onnx2coreml/_fusion/: __init__.py  _attention.py  _rewrite.py
src/onnx2coreml/_lowering/: __init__.py  _activations.py  _attention.py  _common.py  _context.py  _conv.py  _elementwise.py  _indexing.py  _matmul.py  _norm.py  _recurrent.py  _reduce.py  _shape.py
src/onnx2coreml/_passes/: __init__.py  _cleanup.py  _fold.py  _model.py
tests/: helpers.py  test_cli.py  test_convert_api.py  test_errors.py  test_fusion.py  test_integration.py  test_ops_activations.py  test_ops_conv.py  test_ops_elementwise.py  test_ops_indexing.py  test_ops_matmul.py  test_ops_norm.py  test_ops_recurrent.py  test_ops_reduce.py  test_ops_shape.py  test_passes.py  test_types.py  test_verify.py
tools/: batch_eval.py  export_models.py  zoo_eval.py
